feat: statsのプロパティを増加
